--- a/client/src/app/modules/shared/components/search/search.component.html
+++ b/client/src/app/modules/shared/components/search/search.component.html
@@ -5,7 +5,7 @@
     #basicSearchForm="ngForm"
     (ngSubmit)="basicSearch(basicSearchForm)"
     class="basic-form flex flex-center mg1"
-  >
+    >
     <h3 class="pd1">Search Recipes</h3>
     <div class="basic-search-box flex mg1">
       <input
@@ -13,7 +13,7 @@
         [(ngModel)]="searchValue"
         name="searchValue"
         placeholder="Search..."
-      />
+        />
       <button type="submit" class="hover-effect" aria-label="search recipes">
         <fa-icon [icon]="['fas', 'search']" class="search"></fa-icon>
       </button>
@@ -21,12 +21,13 @@
     <div class="select-box mgb1">
       <select name="basicOption" class="basic-select" [(ngModel)]="basicOption">
         <option value="">Select option</option>
-        <option
-          *ngFor="let option of basicOptions"
-          [value]="option.toLowerCase()"
-        >
-          {{ option }}
-        </option>
+        @for (option of basicOptions; track option) {
+          <option
+            [value]="option.toLowerCase()"
+            >
+            {{ option }}
+          </option>
+        }
       </select>
     </div>
   </form>
@@ -36,19 +37,20 @@
     class="optional-form mg1"
     #categoriesForm="ngForm"
     (ngSubmit)="categoriesSearch(categoriesForm)"
-  >
+    >
     <h3 class="pd1">Search By Categories</h3>
     <div class="dish-types">
       <label for="dishType">Dish type</label>
       <div class="select-box mgb1">
         <select name="dishType" class="categories" [(ngModel)]="dishType">
           <option value="">Any category</option>
-          <option
-            *ngFor="let option of dishTypeOptions"
-            [value]="option.toLowerCase()"
-          >
-            {{ option }}
-          </option>
+          @for (option of dishTypeOptions; track option) {
+            <option
+              [value]="option.toLowerCase()"
+              >
+              {{ option }}
+            </option>
+          }
         </select>
       </div>
     </div>
@@ -57,12 +59,13 @@
       <div class="select-box mgb1">
         <select name="difficulty" class="categories" [(ngModel)]="difficulty">
           <option value="">Any category</option>
-          <option
-            *ngFor="let option of difficultyOptions"
-            [value]="option.toLowerCase()"
-          >
-            {{ option }}
-          </option>
+          @for (option of difficultyOptions; track option) {
+            <option
+              [value]="option.toLowerCase()"
+              >
+              {{ option }}
+            </option>
+          }
         </select>
       </div>
     </div>
@@ -75,7 +78,7 @@
           name="vegetarian"
           value="vegetarian"
           [(ngModel)]="vegetarian"
-        />
+          />
         <span tabindex="0"></span>
       </label>
       <label for="glutenCheck" class="block"
@@ -86,7 +89,7 @@
           name="glutenFree"
           value="glutenFree"
           [(ngModel)]="glutenFree"
-        />
+          />
         <span tabindex="0"></span>
       </label>
     </div>
