--- a/client/src/app/modules/admin/overview/overview.component.html
+++ b/client/src/app/modules/admin/overview/overview.component.html
@@ -1,5 +1,5 @@
 <div class="overview">
-  <ng-container *ngIf="!isLoading">
+  @if (!isLoading) {
     <h1 class="mgb1 slim">Overview</h1>
     <div class="counts flex">
       <header class="flex flex-center"><h3>Counts</h3></header>
@@ -24,33 +24,36 @@
           <h3>Latest recipes</h3>
         </header>
         <div class="inner scrolling">
-          <a
-            [routerLink]="['/recipe', recipe._id]"
-            class="recipe grid link"
-            *ngFor="let recipe of latestRecipes"
-          >
-            <figure>
-              <img
-                *ngIf="recipe.image === undefined"
-                src="../../../../assets/images/default_recipe.jpg"
-                [alt]="recipe.mealName"
-                class="img-fit"
-                loading="lazy"
-              />
-              <img
-                *ngIf="recipe.image"
-                [src]="recipe.image"
-                [alt]="recipe.mealName"
-                class="img-fit"
-                loading="lazy"
-              />
-            </figure>
-            <h5 class="center">{{ recipe.mealName | sentenceCase }}</h5>
-            <p class="light-italic created">
-              {{ recipe.createdAt | date }}
-            </p>
-            <p class="author">{{ recipe.author.username }}</p>
-          </a>
+          @for (recipe of latestRecipes; track recipe) {
+            <a
+              [routerLink]="['/recipe', recipe._id]"
+              class="recipe grid link"
+              >
+              <figure>
+                @if (recipe.image === undefined) {
+                  <img
+                    src="../../../../assets/images/default_recipe.jpg"
+                    [alt]="recipe.mealName"
+                    class="img-fit"
+                    loading="lazy"
+                    />
+                }
+                @if (recipe.image) {
+                  <img
+                    [src]="recipe.image"
+                    [alt]="recipe.mealName"
+                    class="img-fit"
+                    loading="lazy"
+                    />
+                }
+              </figure>
+              <h5 class="center">{{ recipe.mealName | sentenceCase }}</h5>
+              <p class="light-italic created">
+                {{ recipe.createdAt | date }}
+              </p>
+              <p class="author">{{ recipe.author.username }}</p>
+            </a>
+          }
         </div>
       </div>
       <div class="latest-comments">
@@ -58,31 +61,35 @@
           <h3>Latest comments</h3>
         </header>
         <div class="inner scrolling">
-          <div class="comment" *ngFor="let comment of latestComments">
-            <h5>{{ comment.author.username }}</h5>
-            <p class="light-italic created">
-              {{ comment.createdAt | date }}
-            </p>
-            <p>{{ comment.commentBody }}</p>
-            <small class="light-italic"
-              >Recipe id: {{ comment.commentedRecipeId }}</small
-            >
+          @for (comment of latestComments; track comment) {
+            <div class="comment">
+              <h5>{{ comment.author.username }}</h5>
+              <p class="light-italic created">
+                {{ comment.createdAt | date }}
+              </p>
+              <p>{{ comment.commentBody }}</p>
+              <small class="light-italic"
+                >Recipe id: {{ comment.commentedRecipeId }}</small
+                >
+              </div>
+            }
           </div>
         </div>
-      </div>
-      <app-statistic-box
-        title="Most commented recipes"
-        [dataArray]="mostCommented"
-        *ngIf="mostCommented.length"
-      ></app-statistic-box>
-      <app-statistic-box
-        title="Most active Users"
-        [dataArray]="mostActiveUsers"
-        *ngIf="mostActiveUsers.length"
-      ></app-statistic-box>
-    </section>
-  </ng-container>
-  <ng-container *ngIf="isLoading">
-    <app-loader [bigLoader]="true"></app-loader>
-  </ng-container>
-</div>
+        @if (mostCommented.length) {
+          <app-statistic-box
+            title="Most commented recipes"
+            [dataArray]="mostCommented"
+          ></app-statistic-box>
+        }
+        @if (mostActiveUsers.length) {
+          <app-statistic-box
+            title="Most active Users"
+            [dataArray]="mostActiveUsers"
+          ></app-statistic-box>
+        }
+      </section>
+    }
+    @if (isLoading) {
+      <app-loader [bigLoader]="true"></app-loader>
+    }
+  </div>
