--- a/client/src/app/modules/admin/statistic-box/statistic-box.component.html
+++ b/client/src/app/modules/admin/statistic-box/statistic-box.component.html
@@ -2,12 +2,13 @@
   [ngClass]="
     autoHeight ? 'height-auto statistic-box-wrapper' : 'statistic-box-wrapper'
   "
->
+  >
   <h3>{{ title }}</h3>
   <div class="bars-wrapper">
-    <app-statistic-bars
-      *ngFor="let singleData of addPercentages"
-      [singleData]="singleData"
-    ></app-statistic-bars>
+    @for (singleData of addPercentages; track singleData) {
+      <app-statistic-bars
+        [singleData]="singleData"
+      ></app-statistic-bars>
+    }
   </div>
 </div>
