--- a/client/src/app/modules/home/home-page/home-page.component.html
+++ b/client/src/app/modules/home/home-page/home-page.component.html
@@ -1,57 +1,62 @@
 <div class="container" id="homeContainer">
-  <app-search
-    (changeParams)="getNewResults($event)"
-    *ngIf="uiService.searchForm"
-  ></app-search>
-  <ng-container *ngIf="highestRatedRecipes.length">
+  @if (uiService.searchForm) {
+    <app-search
+      (changeParams)="getNewResults($event)"
+    ></app-search>
+  }
+  @if (highestRatedRecipes.length) {
     <app-slider [sliderRecipes]="highestRatedRecipes"></app-slider>
-  </ng-container>
+  }
   <!-- Place for tags -->
   <app-tags></app-tags>
   <!-- Latest recipes -->
-  <div
-    class="home-results-container flex flex-center mgt2"
-    *ngIf="latestRecipes.length"
-  >
-    <img
-      src="../../assets/images/small_pngs/recipe-book.png"
-      class="block"
-      alt="recipe-book"
-      loading="lazy"
-    />
-    <h1 class="slim">Latest Recipes</h1>
-    <div class="inner-wrapper flex flex-center">
-      <app-query-recipe
-        *ngFor="let latestRecipe of latestRecipes | slice: 0:displayedRecipes"
-        [singleResult]="latestRecipe"
-      ></app-query-recipe>
+  @if (latestRecipes.length) {
+    <div
+      class="home-results-container flex flex-center mgt2"
+      >
+      <img
+        src="../../assets/images/small_pngs/recipe-book.png"
+        class="block"
+        alt="recipe-book"
+        loading="lazy"
+        />
+      <h1 class="slim">Latest Recipes</h1>
+      <div class="inner-wrapper flex flex-center">
+        @for (latestRecipe of latestRecipes | slice: 0:displayedRecipes; track latestRecipe) {
+          <app-query-recipe
+            [singleResult]="latestRecipe"
+          ></app-query-recipe>
+        }
+      </div>
+      <button (click)="loadMore()" class="load-more-btn">Load more</button>
     </div>
-    <button (click)="loadMore()" class="load-more-btn">Load more</button>
-  </div>
+  }
 
   <!-- Recommended Recipes -->
-  <div
-    class="home-results-container flex flex-center mgt2"
-    *ngIf="recommendedRecipes.length"
-  >
-    <img
-      src="../../assets/images/small_pngs/chubby-pot.png"
-      class="block"
-      alt="pot-flowers"
-      loading="lazy"
-    />
-    <h1 class="slim">What to cook today?</h1>
-    <div class="inner-wrapper flex flex-center">
-      <app-query-recipe
-        *ngFor="let recommendedRecipe of recommendedRecipes"
-        [singleResult]="recommendedRecipe"
-      ></app-query-recipe>
+  @if (recommendedRecipes.length) {
+    <div
+      class="home-results-container flex flex-center mgt2"
+      >
+      <img
+        src="../../assets/images/small_pngs/chubby-pot.png"
+        class="block"
+        alt="pot-flowers"
+        loading="lazy"
+        />
+      <h1 class="slim">What to cook today?</h1>
+      <div class="inner-wrapper flex flex-center">
+        @for (recommendedRecipe of recommendedRecipes; track recommendedRecipe) {
+          <app-query-recipe
+            [singleResult]="recommendedRecipe"
+          ></app-query-recipe>
+        }
+      </div>
     </div>
-  </div>
-  <ng-container *ngIf="errorMessage">
+  }
+  @if (errorMessage) {
     <app-page-error [message]="errorMessage"></app-page-error>
-  </ng-container>
-  <ng-container *ngIf="isLoading">
+  }
+  @if (isLoading) {
     <app-loader [bigLoader]="true"></app-loader>
-  </ng-container>
+  }
 </div>
