--- a/client/src/app/modules/home/slider/slide/slide.component.html
+++ b/client/src/app/modules/home/slider/slide/slide.component.html
@@ -1,34 +1,35 @@
 <a [routerLink]="['/recipe', recipe._id]" class="block single-recipe-slide">
   <figure (mouseenter)="onMouseEnter()" (mouseleave)="onMouseLeave()">
     <!-- add transition here-->
-    <ng-container *ngIf="recipe.image === undefined">
+    @if (recipe.image === undefined) {
       <img
         src="../../../../../assets/images/default_recipe.jpg"
         [alt]="recipe.mealName"
         class="img-fit"
         loading="lazy"
         @fadeAnimation
-      />
-    </ng-container>
-    <ng-container *ngIf="recipe.image">
-      <img
-        *ngIf="recipe.image"
-        [src]="recipe.image"
-        [alt]="recipe.mealName"
-        class="img-fit"
-        loading="lazy"
-        @fadeAnimation
-      />
-    </ng-container>
+        />
+    }
+    @if (recipe.image) {
+      @if (recipe.image) {
+        <img
+          [src]="recipe.image"
+          [alt]="recipe.mealName"
+          class="img-fit"
+          loading="lazy"
+          @fadeAnimation
+          />
+      }
+    }
     <figcaption class="flex flex-center">
       <span
         ><strong>{{ recipe.mealName | sentenceCase }}</strong></span
-      >
-      <span>
-        <fa-icon [icon]="['fas', 'star']" class="star-icon"></fa-icon
-        >&nbsp;&nbsp;{{ recipe.rating }} /
-        {{ recipe.rates.length ? recipe.rates.length + " votes" : "not rated" }}
-      </span>
-    </figcaption>
-  </figure>
-</a>
+        >
+        <span>
+          <fa-icon [icon]="['fas', 'star']" class="star-icon"></fa-icon
+            >&nbsp;&nbsp;{{ recipe.rating }} /
+            {{ recipe.rates.length ? recipe.rates.length + " votes" : "not rated" }}
+          </span>
+        </figcaption>
+      </figure>
+    </a>
