--- a/client/src/app/modules/user/user-home/user-home.component.html
+++ b/client/src/app/modules/user/user-home/user-home.component.html
@@ -1,88 +1,94 @@
 <div class="container profile-container">
-    <div class="profile">
-      <h3 class="italic">Profile</h3>
-      <div class="image-username flex">
-        <ng-container *ngIf="(currentUser$ | async)?.user_image">
-          <img
-            [src]="(currentUser$ | async)?.user_image"
-            [alt]="(currentUser$ | async)?.username"
-            loading="lazy"
+  <div class="profile">
+    <h3 class="italic">Profile</h3>
+    <div class="image-username flex">
+      @if ((currentUser$ | async)?.user_image) {
+        <img
+          [src]="(currentUser$ | async)?.user_image"
+          [alt]="(currentUser$ | async)?.username"
+          loading="lazy"
           />
-        </ng-container>
-        <ng-container *ngIf="!(currentUser$ | async)?.user_image">
-          <img
-            src="../../../../assets/images/default_user.png"
-            [alt]="(currentUser$ | async)?.username"
-            loading="lazy"
+      }
+      @if (!(currentUser$ | async)?.user_image) {
+        <img
+          src="../../../../assets/images/default_user.png"
+          [alt]="(currentUser$ | async)?.username"
+          loading="lazy"
           />
-        </ng-container>
-        <span>{{ (currentUser$ | async)?.username }}</span>
-      </div>
-      <div class="additional-info">
-        <p>
-          <span class="italic">Member since:</span>
-          <span>{{ (currentUser$ | async)?.createdAt | date }}</span>
-        </p>
-        <p>
-          <span class="italic">Published recipes:</span>
-          <span>{{ (currentUser$ | async)?.createdRecipes?.length }}</span>
-        </p>
-      </div>
-      <form enctype="multipart/form-data" class="flex flex-center pd1">
-        <h3 class="center">Change profile image</h3>
-        <div class="upload flex">
-          <div class="buttons flex">
-            <label
-              for="userImageUpload"
-              class="upload-btn-wrapper hover-effect"
+      }
+      <span>{{ (currentUser$ | async)?.username }}</span>
+    </div>
+    <div class="additional-info">
+      <p>
+        <span class="italic">Member since:</span>
+        <span>{{ (currentUser$ | async)?.createdAt | date }}</span>
+      </p>
+      <p>
+        <span class="italic">Published recipes:</span>
+        <span>{{ (currentUser$ | async)?.createdRecipes?.length }}</span>
+      </p>
+    </div>
+    <form enctype="multipart/form-data" class="flex flex-center pd1">
+      <h3 class="center">Change profile image</h3>
+      <div class="upload flex">
+        <div class="buttons flex">
+          <label
+            for="userImageUpload"
+            class="upload-btn-wrapper hover-effect"
             >
-              <input
-                type="file"
-                id="userImageUpload"
-                (change)="selectImageFile($event)"
+            <input
+              type="file"
+              id="userImageUpload"
+              (change)="selectImageFile($event)"
               />
-              Browse image
-            </label>
+            Browse image
+          </label>
+          @if (preview) {
             <button
               type="button"
               (click)="removeSelectedImage()"
-              *ngIf="preview"
               class="btn-cancel hover-effect"
-            >
+              >
               Cancel image
             </button>
-          </div>
-          <figure *ngIf="preview" class="flex">
+          }
+        </div>
+        @if (preview) {
+          <figure class="flex">
             <img
               [src]="preview"
               alt="filename"
               class="img-fit"
               loading="lazy"
-            />
+              />
           </figure>
-        </div>
-        <div class="small">
-          <small class="selected block">{{ filename }}</small>
-          <small class="block">File formats accepted: jpg/jpeg/png/gif</small>
-          <small>Maximum upload file size 2Mb</small>
-        </div>
-        <app-loader [bigLoader]="false" *ngIf="isLoading"></app-loader>
+        }
+      </div>
+      <div class="small">
+        <small class="selected block">{{ filename }}</small>
+        <small class="block">File formats accepted: jpg/jpeg/png/gif</small>
+        <small>Maximum upload file size 2Mb</small>
+      </div>
+      @if (isLoading) {
+        <app-loader [bigLoader]="false"></app-loader>
+      }
 
-        <div class="message-wrapper center">
+      <div class="message-wrapper center">
+        @if (message) {
           <app-info-message
-            *ngIf="message"
             [message]="message"
             [messageStatus]="messageStatus"
             (clear)="updateMessage('')"
           ></app-info-message>
-        </div>
-        <button
-          type="button"
-          class="btn-action mg1 hover-effect"
-          (click)="submitImage()"
+        }
+      </div>
+      <button
+        type="button"
+        class="btn-action mg1 hover-effect"
+        (click)="submitImage()"
         >
-          Upload image
-        </button>
-      </form>
-    </div>
+        Upload image
+      </button>
+    </form>
+  </div>
 </div>
